<li>Establish authentication and encryption keys via silent SMP. The authentication and encryption keys are derived from a Whirlpool digest of the secret.</li>
<li>Guard QList::last().</li>
<li>Guard QList::removeAt().</li>
<li>Notify the user of URL import statistics.</li>
<li>Prompt before accessing a remote URL.</li>
<li>Removed input masks from IPv6 fields.</li>
<li>Replace spaces with dashes in StarBeam and e-mail attachment file names.</li>
<li>Require account salts to be at least 512 bytes.</li>
<li>Simplified copying and exporting of public keys.</li>
<li>Updated NTRU files (05/14/2015).</li>
<li>Verify a StarBeam's provided pulse size against some defined maximum.</li>
</ol>
04.09.2015
<ol>
<li>Added Documentation/Spot-On-Kernel.1.</li>
<li>Added the option 65536 to the File Encryption's Read Size.</li>
<li>Allow modification of StarBeam pulse sizes.</li>
<li>Automatically verify StarBeams. Please see the Options panel.</li>
<li>Corrected QSqlQuery preparation. QSqlQuery::exec() must not be used to prepare SQL statements. (spoton_listener::slotNewConnection(), spoton_misc::savePublishedNeighbo())</li>
<li>Corrected Qt DLLs in the Windows bundle.</li>
<li>Corrected inspection of QSqlQuery::exec() errors in various locations.</li>
<li>Corrected server-side processing of UDP datagrams.</li>
<li>Corrected spoton_misc::prepareUrlDistillersDatabase() and spoton_misc::prepareUrlKeysDatabase() with respect to the ok variables.</li>
<li>Improved error messages in the UI.</li>
<li>Include a file's digest within each StarBeam pulse.</li>
<li>Issue QThread::wait() after QThread::quit().</li>
<li>On Qt 5.x and Windows, assume a fusion style.</li>
<li>QWidget::activateWindow() should only be used on Windows!</li>
<li>Updated SQLite to version 3.8.9, Windows.</li>
</ol>

Archived Contents
<br><br>
https://github.com/textbrowser/spot-on/blob/master/branches/Documentation/RELEASE-NOTES.archived
</html>